Theme improvements + Fixed glyphicons not showing in some browsers

--- a/housematch-webapp/src/main/webapp/resources/css/photo-manager.css
+++ b/housematch-webapp/src/main/webapp/resources/css/photo-manager.css
@@ -43,7 +43,7 @@
 }
 
 .photo-manager .grid-cell {
-    width: 270px;
+    width: 265px;
     height: 200px;
     padding: 8px;
     float: left;
